18化再挑戦 loginなども対応済み

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -5,6 +5,17 @@ ja:
       blank: "を入力してください"
       too_long: "は%{count}文字以内で入力してください"
       too_short: "は%{count}文字以上で入力してください"
+  devise:
+    sessions:
+      signed_in: "ログインしました"
+      signed_out: "ログアウトしました"
+      user:
+        signed_in: "ユーザーがログインしました"
+        signed_out: "ユーザーがログアウトしました"
+    registrations:
+      signed_up: "アカウント登録が完了しました"
+      updated: "アカウント情報が更新されました"
+      destroyed: "アカウントが削除されました"
   activerecord:
     models:
       post: "投稿"
