--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -18,7 +18,8 @@ ja:
       destroyed: "アカウントが削除されました"
     failure:
       unauthenticated: "登録又はログインが必要です"
-      not_found_in_database: "データベースにユーザーが見つかりません"
+      user:
+        not_found_in_database: "ユーザーが見つかりません"
       admin:
         not_found_in_database: "管理者ユーザーが見つかりません"
         already_authenticated: "管理者はすでにログインしています"
